{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 85,
  "lineage": "2fb7d94f-0a27-0ef0-152d-b6772ea8b6c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0071174ad8cbb9e17",
            "arn": "arn:aws:ec2:us-east-1:873461662356:instance/i-079973f163747b488",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079973f163747b488",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-041e000a9e1621bb4"
              }
            ],
            "primary_network_interface_id": "eni-041e000a9e1621bb4",
            "private_dns": "ip-10-0-0-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.57",
            "public_ip": "3.84.194.10",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-051d51882bb3264d2",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0096c5632cf17491f",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project01-resources-ec2",
              "Project": "project01"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project01-resources-ec2",
              "Project": "project01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0445b1df20fb28ea2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873461662356",
            "id": "i-079973f163747b488",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.public_traffic",
            "aws_subnet.public",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873461662356:internet-gateway/igw-03afa859e24c94232",
            "id": "igw-03afa859e24c94232",
            "owner_id": "873461662356",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project01-resource-main",
              "Project": "project01"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project01-resource-main",
              "Project": "project01"
            },
            "vpc_id": "vpc-0a6d353a6b847f93e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873461662356:route-table/rtb-0ec19fc3bc3c13849",
            "id": "rtb-0ec19fc3bc3c13849",
            "owner_id": "873461662356",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03afa859e24c94232",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project01-resource-public",
              "Project": "project01"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project01-resource-public",
              "Project": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6d353a6b847f93e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873461662356",
            "id": "rtb-0ec19fc3bc3c13849",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e95cad800a04cdc3",
            "region": "us-east-1",
            "route_table_id": "rtb-0ec19fc3bc3c13849",
            "subnet_id": "subnet-0096c5632cf17491f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873461662356:security-group/sg-0445b1df20fb28ea2",
            "description": "Security group allowing traffic on ports 443 and 80",
            "egress": [],
            "id": "sg-0445b1df20fb28ea2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": " public_http_traffic",
            "name_prefix": "",
            "owner_id": "873461662356",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project01-resources-public",
              "Project": "project01"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project01-resources-public",
              "Project": "project01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6d353a6b847f93e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873461662356",
            "id": "sg-0445b1df20fb28ea2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873461662356:subnet/subnet-0096c5632cf17491f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0096c5632cf17491f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873461662356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project01-resources-public",
              "Project": "project01"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project01-resources-public",
              "Project": "project01"
            },
            "vpc_id": "vpc-0a6d353a6b847f93e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873461662356",
            "id": "subnet-0096c5632cf17491f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873461662356:vpc/vpc-0a6d353a6b847f93e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027c90d44602165aa",
            "default_route_table_id": "rtb-02d65114ac231217a",
            "default_security_group_id": "sg-02106d1e68a57d038",
            "dhcp_options_id": "dopt-0a90056f8f31f3f9d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6d353a6b847f93e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d65114ac231217a",
            "owner_id": "873461662356",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project01-resources",
              "Project": "project01"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project01-resources",
              "Project": "project01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873461662356",
            "id": "vpc-0a6d353a6b847f93e",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873461662356:security-group-rule/sgr-0536aaa269056f28a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0536aaa269056f28a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0445b1df20fb28ea2",
            "security_group_rule_id": "sgr-0536aaa269056f28a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873461662356",
            "id": "sgr-0536aaa269056f28a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.public_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873461662356:security-group-rule/sgr-02796d5566188a737",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-02796d5566188a737",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0445b1df20fb28ea2",
            "security_group_rule_id": "sgr-02796d5566188a737",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873461662356",
            "id": "sgr-02796d5566188a737",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.public_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}